# Solana-signature-verification

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
tests/: airdrop.ts
